--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -9,7 +9,7 @@ on:
       - main
 
 env:
-  AWS_REGION: $AWS_REGION   # <-- Cambia a tu región AWS
+  AWS_REGION: ${{ secrets.AWS_REGION }}   # <-- Cambia a tu región AWS
   TF_VERSION: 1.7.4       # <-- Versión de Terraform que quieres usar
   TERRAFORM_DIR: ./terraform
 
