--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -9,7 +9,7 @@ on:
       - main
 
 env:
-  AWS_REGION: ${{ secrets.AWS_REGION }}   # <-- Cambia a tu región AWS
+  AWS_REGION: us-east-2   # <-- Cambia a tu región AWS
   TF_VERSION: 1.7.4       # <-- Versión de Terraform que quieres usar
   TERRAFORM_DIR: ./terraform
 
@@ -31,7 +31,7 @@ jobs:
       with:
         aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
         aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }} 
-        aws-region: ${{ secrets.AWS_REGION }}     
+        aws-region: ${{ env.AWS_REGION }}     
 
     - name: 'Setup Terraform'
       uses: hashicorp/setup-terraform@v3
