--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -11,7 +11,7 @@ on:
 env:
   AWS_REGION: us-east-2   # <-- Cambia a tu región AWS
   TF_VERSION: 1.4.0      # <-- Versión de Terraform que quieres usar
-  TERRAFORM_DIR: ../
+  TERRAFORM_DIR: ./
 
 jobs:
   terraform:
@@ -30,8 +30,6 @@ jobs:
           ls -l       
     - name: 'Checkout'
       uses: actions/checkout@v4
-    - name: Mostrar estructura del repositorio
-      run: ls -R
 
     - name: Configure AWS Credentials
       uses: aws-actions/configure-aws-credentials@v3
