--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -57,7 +57,7 @@ jobs:
 
     - name: 'Terraform Plan'
       working-directory: ${{ env.TERRAFORM_DIR }}
-      run: terraform plan
+      run: terraform plan -out=tfplan
 
     - name: 'Terraform Apply'
       if: github.ref == 'refs/heads/main' && github.event_name == 'push'
