--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -58,4 +58,4 @@ jobs:
     - name: 'Terraform Apply'
       if: github.ref == 'refs/heads/main' && github.event_name == 'push'
       working-directory: ${{ env.TERRAFORM_DIR }}
-      run: terraform apply -auto-approve tfplan
+      run: terraform apply -auto-approve
