--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -55,6 +55,10 @@ jobs:
       working-directory: ${{ env.TERRAFORM_DIR }}
       run: terraform validate
 
+    - name: 'Terraform Plan'
+      working-directory: ${{ env.TERRAFORM_DIR }}
+      run: terraform plan      
+
     - name: 'Terraform Apply'
       if: github.ref == 'refs/heads/main' && github.event_name == 'push'
       working-directory: ${{ env.TERRAFORM_DIR }}
