--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -1,65 +1,85 @@
-name: 'Terraform EKS Pipeline'
+name: Terraform Multi-Job Pipeline
 
 on:
   push:
-    branches:
-      - main
+    branches: [ main ]
   pull_request:
-    branches:
-      - main
 
 env:
-  AWS_REGION: us-east-2
-  TF_VERSION: 1.4.0   
-  TERRAFORM_DIR: ./
+  AWS_REGION: us-east-1
 
 jobs:
-  terraform:
-    name: 'Terraform Plan and Apply'
+  terraform-network:
+    name: Terraform Network
     runs-on: ubuntu-latest
- 
-
-    permissions:
-      id-token: write 
-      contents: read
-
+    defaults:
+      run:
+        working-directory: ./terraform/network
     steps:
-    - name: "Check current path"
-      run: |
-          pwd
-          ls -l       
-    - name: 'Checkout'
-      uses: actions/checkout@v4
+      - uses: actions/checkout@v3
 
-    - name: Configure AWS Credentials
-      uses: aws-actions/configure-aws-credentials@v3
-      with:
-        aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-        aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }} 
-        aws-region: ${{ env.AWS_REGION }}     
+      - name: Setup Terraform
+        uses: hashicorp/setup-terraform@v3
+        with:
+          terraform_version: 1.5.7
 
-    - name: 'Setup Terraform'
-      uses: hashicorp/setup-terraform@v3
-      with:
-        terraform_version: ${{ env.TF_VERSION }}
+      - name: Terraform Init
+        run: terraform init
 
-    - name: 'Terraform Init'
-      working-directory: ${{ env.TERRAFORM_DIR }}
-      run: terraform init
+      - name: Terraform Plan
+        run: terraform plan
 
-    - name: 'Terraform Format Check'
-      working-directory: ${{ env.TERRAFORM_DIR }}
-      run: terraform fmt -check
+      - name: Terraform Apply
+        if: github.ref == 'refs/heads/main'
+        run: terraform apply -auto-approve
 
-    - name: 'Terraform Validate'
-      working-directory: ${{ env.TERRAFORM_DIR }}
-      run: terraform validate
+  terraform-eks:
+    name: Terraform EKS
+    runs-on: ubuntu-latest
+    needs: terraform-network
+    defaults:
+      run:
+        working-directory: ./terraform/eks
+    steps:
+      - uses: actions/checkout@v3
 
-    - name: 'Terraform Plan'
-      working-directory: ${{ env.TERRAFORM_DIR }}
-      run: terraform plan      
+      - name: Setup Terraform
+        uses: hashicorp/setup-terraform@v3
+        with:
+          terraform_version: 1.5.7
 
-    - name: 'Terraform Apply'
-      if: github.ref == 'refs/heads/main' && github.event_name == 'push'
-      working-directory: ${{ env.TERRAFORM_DIR }}
-      run: terraform apply -auto-approve
+      - name: Terraform Init
+        run: terraform init
+
+      - name: Terraform Plan
+        run: terraform plan
+
+      - name: Terraform Apply
+        if: github.ref == 'refs/heads/main'
+        run: terraform apply -auto-approve
+
+  terraform-ec2:
+    name: Terraform EC2
+    runs-on: ubuntu-latest
+    needs: terraform-eks
+    defaults:
+      run:
+        working-directory: ./terraform/ec2
+    steps:
+      - uses: actions/checkout@v3
+
+      - name: Setup Terraform
+        uses: hashicorp/setup-terraform@v3
+        with:
+          terraform_version: 1.5.7
+
+      - name: Terraform Init
+        run: terraform init
+
+      - name: Terraform Plan
+        run: terraform plan
+
+      - name: Terraform Apply
+        if: github.ref == 'refs/heads/main'
+        run: terraform apply -auto-approve
+
